--- a/EmailApplication/src/main/resources/application-prod.properties
+++ b/EmailApplication/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@ server.port = 9005
 
 spring.jpa.hibernate.ddl-auto=create
 
-spring.datasource.url=jdbc:mysql://localhost:3306/email?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/application?CreateDatabaseIfNotExist=true
 	
 spring.datasource.username=root
 spring.datasource.password=Ronnie2K16
