--- a/EmailApplication/pom.xml
+++ b/EmailApplication/pom.xml
@@ -54,11 +54,25 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.3.8</version>
 		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
@@ -69,7 +83,7 @@
 			<plugin>
 				<groupId> org.apache.maven.plugins </groupId>
 				<artifactId> maven-surefire-plugin </artifactId>
-				</plugin>
+			</plugin>
 		</plugins>
 	</build>
 </project>
